Fix carousel on mobile devices

--- a/index.css
+++ b/index.css
@@ -106,6 +106,9 @@
 }
 
 .mobile-navigation__overlay {
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
     position: absolute;
     top: 80px;
     background-color: transparent;
@@ -309,7 +312,13 @@
     }
     @media screen and (max-width: 992px) {
        margin: 0 20px 120px;
+       padding: 50px;
     }
+
+    @media screen and (max-width: 576px) {
+        margin: 0 20px 120px;
+        padding: 40px;
+     }
 }
 
 .action-content__title {
@@ -437,6 +446,13 @@
 .toggle-icon {
     width: 18px;
     height: 18px;
+}
+
+.process-item__content {
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        align-items: start;
+    }
 }
 
 .process-item__title {
@@ -604,6 +620,9 @@
     margin-top: 80px;
     justify-content: center;
     gap: 80px;
+    @media screen and (max-width: 576px) {
+        gap: 40px;
+    }
 }
 
 .carousel-controller__left {
@@ -678,10 +697,19 @@
 
 .contact-form__actionlist {
     gap: 50px;
+    @media screen and (max-width: 576px) {
+        flex-direction: column;
+        align-items: start;
+        gap: 20px;
+    }
 }
 
 .contact-form__action {
     gap: 20px;
+    @media screen and (max-width: 576px) {
+        width: 100%;
+        justify-content: space-between;
+    }
 }
 
 .contact-form__action>input {
